--- a/WebContent/css/estilos.css
+++ b/WebContent/css/estilos.css
@@ -1,10 +1,8 @@
 .blue.lighten-1 {
-  background-color: rgba(66, 165, 245, 0.5) !important;
-}
+  background-color: rgba(66, 165, 245, 0.5) !important; }
 
 .nav-wrapper a:nth-child(1) {
-  margin-left: 3%;
-}
+  margin-left: 3%; }
 
 .body-main {
   background-image: url("../img/back-home.jpg");
@@ -12,84 +10,69 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100%;
-  width: 100%;
-}
+  width: 100%; }
 
 .letra {
-  color: white;
-}
+  color: white; }
 
 .central {
   margin-left: 15px;
-  margin-right: 20px;
-}
+  margin-right: 20px; }
 
 .caixa-vazia {
   width: 100%;
-  margin-bottom: 44%;
- 
-}
+  height: 90%;
+  height: calc(100%-64px); }
 
 .ideia {
-  background-color: white;
-}
+  background-color: white; }
 
 .staff {
   background-color: white;
-  padding: 0 2em;
-}
+  padding: 0 2em; }
 
 .modal-overlay {
-  background-color: #42A5F5 !important;
-}
+  background-color: #42A5F5 !important; }
 
 #modal-login {
   margin-left: 60%;
   margin-top: 2%;
   width: 30%;
-  border: 3px solid #49677F;
-}
+  border: 3px solid #49677F; }
 
 .input-field label {
-  color: #42A5F5;
-}
+  color: #42A5F5; }
 
 input:not([type]):focus:not([readonly]) + label,
 input[type=text]:focus:not([readonly]) + label,
 input[type=password]:focus:not([readonly]) + label,
 input[type=email]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: gray !important;
-}
+  color: gray !important; }
 
 /* label focus color */
 .input-field input[type=text]:focus + label,
 .input-field input[type=email]:focus + label {
-  color: gray;
-}
+  color: gray; }
 
 /* label underline focus color */
 .input-field input[type=text]:focus {
   border-bottom: 1px solid #E8880C;
-  box-shadow: 0 1px 0 0 #E8880C;
-}
+  box-shadow: 0 1px 0 0 #E8880C; }
 
 /* valid color */
 .input-field input[type=text].valid {
   border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
-}
+  box-shadow: 0 1px 0 0 #000; }
 
 /* invalid color */
 .input-field input[type=text].invalid {
   border-bottom: 1px solid #000;
-  box-shadow: 0 1px 0 0 #000;
-}
+  box-shadow: 0 1px 0 0 #000; }
 
 /* icon prefix focus color */
 .input-field .prefix.active {
-  color: #000;
-}
+  color: #000; }
 
 input:not([type]):focus:not([readonly]),
 input[type=text]:focus:not([readonly]),
@@ -97,38 +80,30 @@ input[type=password]:focus:not([readonly]),
 input[type=email]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
   border-bottom: 1px solid #49677F;
-  box-shadow: 0 1px 0 0 #49677F;
-}
+  box-shadow: 0 1px 0 0 #49677F; }
 
 input {
-  color: gray !important;
-}
-
-
+  color: gray !important; }
 
 .menu-lateral {
-  margin-top: 3em;
-}
-.menu-lateral table {
-  background-color: gray;
-  color: white;
-}
-.menu-lateral img {
-  width: 80px;
-  height: 80px;
-  background-color: white;
-  margin-left: 3em;
-}
+  margin-top: 3em; }
+  .menu-lateral table {
+    background-color: gray;
+    color: white; }
+  .menu-lateral img {
+    width: 80px;
+    height: 80px;
+    background-color: white;
+    margin-left: 3em; }
 
 .caixa-eventos p:nth-child(2) {
-  float: right;
-}
+  float: right; }
 .caixa-eventos p:nth-child(3) {
-  float: left;
-}
+  float: left; }
 .caixa-eventos p:nth-child(3) {
-  float: right;
-}
+  float: right; }
 .caixa-eventos a {
-  margin-left: 80%;
-}
+  margin-left: 80%; }
+
+.aaateste {
+  color: black; }
