--- a/WebContent/scss/estilos.scss
+++ b/WebContent/scss/estilos.scss
@@ -39,7 +39,7 @@ $letra: gray;
 }
 .caixa-vazia{
     width: 100%;
-    height: 100%;
+    margin-top: 40%;
 
 }
 .ideia{
@@ -59,8 +59,22 @@ $letra: gray;
     width: 30%;
     border: 3px solid $cor8;
 }
-
-
+.titulos{
+	font-size: 2em;
+	color: $cor1;
+}
+.tamanho-imagem{
+	width: 100px;
+	height: 350px;
+}
+.cor-letra-padrao{
+	color: $cor1;
+	font-size: 2em;
+	font-weight: bold;
+}
+.ajusta-ancora{
+	padding-top: 3em;
+}
 //inputs
 
 .input-field label {
@@ -141,4 +155,28 @@ input{
 }
 .aaateste{
 	color:black;
+}
+.row {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0px;
+}
+
+//troca
+.meu-container{
+	width: 100%;
+	padding-left: 10%;
+}
+.desenvol{
+	background-color: #eff2f7;
+	width: 100%;
+	padding-left: 15%;
+	margin-top: -3%;
+}
+.img-colaboradores{
+	img{
+		width: 100px;
+		height: 100px;
+	}	
+	margin-left: 15%;
 }
